2000-06-07  Kazuhiro Fujieda <fujieda@jaist.ac.jp>

        mount.cc (error): New function to report an error and exit.
        umount.cc (error): Ditto.
        (remove_all_automounts): Check return status of cygwin_umount.
        (remove_all_user_mounts): Ditto.
        (remove_all_system_mounts): Ditto.

2000-06-05  DJ Delorie  <dj@cygnus.com>

	* mount.cc: add stdlib.h for exit
	* umount.cc: ditto
	* strace.cc: add #define for alloca

Fri May 20  0:01:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* regtool.cc (find_key): Add parameter `access'.
	Call `RegOpenKeyEx' with that desired access.
	(cmd_add, cmd_remove, cmd_set, cmd_unset): Call
	`find_key' with KEY_ALL_ACCESS access.
	(cmd_list, cmd_check, cmd_get): Call `find_key'
	with KEY_READ access.

2000-05-19  DJ Delorie  <dj@cygnus.com>

	* cygpath.cc: add --windir/--sysdir options
	* utils.sgml: and document them

Thu May 18 14:38:26 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Eliminate WINSUP_DEPS.
	* cygpath.cc: Reorganize includes to accomodate sys/cygwin.h changes.
	* mkgroup.c: Ditto.
	* mkpasswd.c: Ditto.
	* mount.cc: Ditto. Eliminate use of cygwin source specific includes.
	* ps.cc: Ditto.
	* cygwin.cc: Eliminate obsolete file.

Wed Apr 26 23:43:25 2000  Christopher Faylor <cgf@cygnus.com>

	* mount.cc (main): Add "-X" option to specify a "Cygwin executable".

Sat Apr 15 23:34:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* mkpasswd.c (main): Use GetDCName instead of GetAnyDCName.
	Don't create extra passwd entry for administrators group
	if local_groups is set.
	(usage): Change usage text slightly.
	(enum_users): Loop while ERROR_MORE_DATA is returned.
	(enum_local_groups): Ditto.
	* mkgroup.c (enum_local_groups): Ditto.
	(enum_groups) Ditto.
	(usage): Change usage text slightly.

Thu Apr 13 01:22:35 2000  Christopher Faylor <cgf@cygnus.com>

	* cygpath.cc (main): Add -a -o and -c options.
	(doit): Ditto.

Mon Apr 10 22:56:07 2000  Christopher Faylor <cgf@cygnus.com>
